--- a/explore_tree.ipynb
+++ b/explore_tree.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -336,13 +336,13 @@
        " 'gear_lever']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nodes[0]["
+    "nodes[0]"
    ]
   },
   {
