Prints pathes from the deepest (most specific) occurrence to the full set.

--- a/explore_tree.ipynb
+++ b/explore_tree.ipynb
@@ -65,22 +65,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def my_print(list_, max_len=7):\n",
+    "    ans = ' '.join(str(i) for  i in list_[:max_len])\n",
+    "    len_ = len(list_)\n",
+    "    if len_ > max_len:\n",
+    "        ans += '... ({})'.format(len_)\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(22, 22, 22)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coastwise unladen flota sidewheel undecked shallow-draught carrack... (11) 4\n",
+      "vaka flat-bottomed whalebone hidden_reserve kapa balsa_raft sailcloth casco sampan plying butter-box... (15)\n",
+      "cocoanut swiftlet stilt cowry pearl cowries\n",
+      "camlet sultan macaw dey argillite mundu mother-of-pearl mahogany jades micaceous tajine... (31)\n",
+      "\n",
+      "tunnage wharfside dhow 4\n",
+      "salter seal_oil kapok vapored rum whale_oil\n",
+      "wooden_boat wooden_shoe chantey supercargo lubberly sennit kapa balsa_raft breadfruit_tree whaleboat butter-box\n",
+      "camlet sultan macaw dey argillite mundu mother-of-pearl mahogany jades micaceous tajine... (31)\n",
+      "\n",
+      "bilgewater oil_tanker supertanker dhow 4\n",
+      "ranson Tropical_Storm_Cindy\n",
+      "ashore islander glycosylphosphatidylinositol bounding_main conga sardines wooden_boat floating_island hawser luff breadfruit... (50)\n",
+      "naupaka sooty_tern black_oystercatcher plana black_slug subtidal striped_marlin coral_reef_fish purple_heron butterflyfish conjunctive_adverb... (176)\n",
+      "\n",
+      "cruising pleasure_boat dhow 4\n",
+      "coast_guard bulkhead mooring monohull well_deck patrol_ship nautically nitrox diving_equipment coaling_station breton... (61)\n",
+      "ashore islander glycosylphosphatidylinositol bounding_main conga sardines wooden_boat floating_island hawser luff breadfruit... (50)\n",
+      "naupaka sooty_tern black_oystercatcher plana black_slug subtidal striped_marlin coral_reef_fish purple_heron butterflyfish conjunctive_adverb... (176)\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "len(paths), len(nodes), len(depths)"
+    "\"\"\"\n",
+    "Prints pathes from the deepest (most specific) occurrence to the full set.\n",
+    "\"\"\"\n",
+    "max_depth = -1\n",
+    "for path, node, depth in reversed(list(zip(paths, nodes, depths))):\n",
+    "    if depth < max_depth:\n",
+    "        break\n",
+    "    else:\n",
+    "        max_depth = depth\n",
+    "    print(\n",
+    "        #'dhow' in node, # == True \n",
+    "        my_print(node), depth)\n",
+    "    for node2 in path[:-1]:\n",
+    "        #print('{}\\t{}\\t{}'.format(my_print(node2['attributes']), node2['Node'], my_print(node2['own_objects'])))\n",
+    "        print('{}'.format(my_print(node2['own_objects'], max_len=11)))\n",
+    "    print()\n"
    ]
   },
   {
@@ -105,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -118,231 +165,16 @@
        " 'sports_car',\n",
        " 'dinky-di',\n",
        " 'jalopy',\n",
-       " 'cupholder',\n",
-       " 'lawnmower',\n",
-       " 'hardtop',\n",
-       " 't0',\n",
-       " 'sidesaddle',\n",
-       " 'tyre',\n",
-       " 'crew_cab',\n",
-       " 'joyride',\n",
-       " 'bonkers',\n",
-       " 'motorcycle',\n",
-       " 'coachbuilder',\n",
-       " 'cruiser',\n",
-       " 'military_vehicle',\n",
-       " 'border_collie',\n",
-       " 'prius',\n",
-       " 'clutch_pedal',\n",
-       " 'off-roader',\n",
-       " 'chinky',\n",
-       " 'circular_segment',\n",
-       " 'hardpack',\n",
-       " 'minivan',\n",
-       " 'kickflip',\n",
-       " 'drowsiness',\n",
-       " 'power_train',\n",
-       " 'sailboat',\n",
-       " 'trunk_lid',\n",
-       " 'aks',\n",
-       " 'floorboard',\n",
-       " 'underbody',\n",
-       " 'three-wheeled',\n",
-       " 'stunna',\n",
-       " 'biker',\n",
-       " 'upholstery',\n",
-       " 'soft_top',\n",
-       " 'car',\n",
-       " 'racing_circuit',\n",
-       " 'curricle',\n",
-       " 'phaeton',\n",
-       " 'racetrack',\n",
-       " 'saddle_horse',\n",
-       " 'tranny',\n",
-       " 'chevy',\n",
-       " 'flat_tire',\n",
-       " 'roll_cage',\n",
-       " 'econocar',\n",
-       " 'lawn-mower',\n",
-       " 'defroster',\n",
-       " 'truckish',\n",
-       " 'accelerator_pedal',\n",
-       " 'slappy',\n",
-       " 'cabriolet',\n",
-       " 'attack_helicopter',\n",
-       " 'up-armored',\n",
-       " 'grippy',\n",
-       " 'horse_trainer',\n",
-       " 'air_suspension',\n",
-       " 'oil_slick',\n",
-       " 'fender',\n",
-       " 'manumatic',\n",
-       " 'ignition_switch',\n",
-       " 'grand_tourer',\n",
-       " 'braking',\n",
-       " 'skateboard',\n",
-       " 'roadgoing',\n",
-       " 'flat-six',\n",
-       " 'humanoid_robot',\n",
-       " 'tricked-out',\n",
-       " 'locking_differential',\n",
-       " 'amphibious_vehicle',\n",
-       " 'shift_lever',\n",
-       " 'quarter_horse',\n",
-       " 'sportiness',\n",
-       " 'baby_oil',\n",
-       " 'torquey',\n",
-       " 'roof_rack',\n",
-       " 'dune_buggy',\n",
-       " 'ski_run',\n",
-       " 'vehicle',\n",
-       " 'standard_transmission',\n",
-       " 'skier',\n",
-       " 'draft_horse',\n",
-       " 'ornithopter',\n",
-       " 'osculating_plane',\n",
-       " 'four-door',\n",
-       " 'car_door',\n",
-       " 'runabout',\n",
-       " 'oleo',\n",
-       " 'pedal',\n",
-       " 'four-wheel_drive',\n",
-       " 'snowmobile',\n",
-       " 'fan_belt',\n",
-       " 'trendoid',\n",
-       " 'disc_brake',\n",
-       " 'mountain_bike',\n",
-       " 'drive_light',\n",
-       " 'apoplectically',\n",
-       " 'pick-up_truck',\n",
-       " 'gas_gauge',\n",
-       " 'luge',\n",
-       " 'sedan',\n",
-       " 'sporty',\n",
-       " 'sequential_manual_gearbox',\n",
-       " 'steering_wheel',\n",
-       " 'hackney',\n",
-       " 'running_board',\n",
-       " 'relative_velocity',\n",
-       " 'trike',\n",
-       " 'car_racing',\n",
-       " 'engine_oil',\n",
-       " 'speeder',\n",
-       " 'handbrake',\n",
-       " 'roadster',\n",
-       " '4wd',\n",
-       " 'two-seater',\n",
-       " 'bodyboard',\n",
-       " 'wheel',\n",
-       " 'estate_car',\n",
-       " 'sensable',\n",
-       " 'mower',\n",
-       " 'track_racing',\n",
-       " 'seat_tube',\n",
-       " 'clutchless',\n",
-       " 'hosepipe',\n",
-       " 'dirt_track',\n",
-       " 'ski_jacket',\n",
-       " 'training_wheel',\n",
-       " 'fire_engine_red',\n",
-       " 'motorbike',\n",
-       " 'kickstand',\n",
-       " 'foot_brake',\n",
-       " 'petrol_tank',\n",
-       " 'crash_helmet',\n",
-       " 'gearshift',\n",
-       " 'hubcap',\n",
-       " 'ragtop',\n",
-       " 'sunroof',\n",
-       " 'dome_light',\n",
-       " 'blurrily',\n",
-       " 'horn_button',\n",
-       " 'jackrabbit',\n",
-       " 'lowrider',\n",
-       " 'garage_door',\n",
-       " 'hot_rod',\n",
-       " 'suspension_system',\n",
-       " 'speedster',\n",
-       " 'aircar',\n",
-       " 'compact_car',\n",
-       " 'decklid',\n",
-       " 'front-wheel_drive',\n",
-       " 'sportily',\n",
-       " 'mahout',\n",
-       " 'armored_vehicle',\n",
-       " 'torque_converter',\n",
-       " 'pickup_truck',\n",
-       " 'tilbury',\n",
-       " 'hatchback',\n",
-       " 'four-wheeled',\n",
-       " 'drop_top',\n",
-       " 'go-cart',\n",
-       " 'tankful',\n",
-       " 'parts_bin',\n",
-       " 'geartrain',\n",
-       " 'car_sickness',\n",
-       " 'bendy',\n",
-       " 'penny_farthing',\n",
-       " 'rear_end',\n",
-       " 'rollerblader',\n",
-       " 'sport_utility_vehicle',\n",
-       " 'batty',\n",
-       " 'road_runner',\n",
-       " 'chaise',\n",
-       " 'glove_compartment',\n",
-       " 'footwell',\n",
-       " 'coupe',\n",
-       " 'wheels',\n",
-       " 'speedo',\n",
-       " 'steering_system',\n",
-       " 'sportbike',\n",
-       " 'taurus',\n",
-       " 'touring_car',\n",
-       " 'motocross',\n",
-       " 'off-roading',\n",
-       " 'beer_can',\n",
-       " 'vette',\n",
-       " 'tandem_bicycle',\n",
-       " 'quattro',\n",
-       " 'has-a',\n",
-       " 'ejector_seat',\n",
-       " 'trail_bike',\n",
-       " 'automatic_transmission',\n",
-       " 'farm_machinery',\n",
-       " 'gas_tank',\n",
-       " 'hydride',\n",
-       " 'fog_light',\n",
-       " 'airplane',\n",
-       " 'two-wheeler',\n",
-       " 'powerboat',\n",
-       " 'tip-up',\n",
-       " 'charioteer',\n",
-       " 'caballero',\n",
-       " 'surfboard',\n",
-       " 'inner_tube',\n",
-       " 'Chevrolet_SSR',\n",
-       " 'boat',\n",
-       " 'stick_shift',\n",
-       " 'steering_column',\n",
-       " 'rear_light',\n",
-       " 'dhow',\n",
-       " 'high_beam',\n",
-       " 'horse-drawn_vehicle',\n",
-       " 'dirtbike',\n",
-       " 'hydraulic_brakes',\n",
-       " 'pullover',\n",
-       " 'lexus',\n",
-       " 'bed_cover',\n",
-       " 'gear_lever']"
+       " 'cupholder']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nodes[0]"
+    "nodes[0][:8]"
    ]
   },
   {
