--- a/explore_tree.ipynb
+++ b/explore_tree.ipynb
@@ -2,21 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.DEBUG, format=\"%(asctime)s: (%(lineno)s) %(levelname)s %(message)s\")\n",
+    "import os\n",
+    "\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%pylab inline\n",
+    "pylab.rcParams['figure.figsize'] = (18, 6)\n",
+    "import pprint\n",
+    "import networkx as nx\n",
+    "\n",
+    "from semeval_fca import find_paths_to_object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Freq cutoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import logging\n",
-    "logging.basicConfig(level=logging.DEBUG, format=\"%(asctime)s: (%(lineno)s) %(levelname)s %(message)s\")\n",
+    "task_dir = '/mnt/permanent/Language/English/Data/SemEval/2018/Hypernym/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freq_filen = os.path.join(task_dir, 'frequency_lists/1A_english_frequencylist.txt')\n",
+    "freqs = defaultdict(int)\n",
+    "freqs.update({l.split(\"\\t\")[0]: int(l.split(\"\\t\")[1]) for l in open(freq_filen)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABB4AAAFpCAYAAAA7uevtAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGGJJREFUeJzt3W2MpXd53/HfFS/QlEAh9dRyvHbXQQuSQa2BlUtFQLQ0\nYGOEoS+orRYIRSwodgtqpWihL6CpLLltCC1q6sjYG4xK7Lg4DlbtBByKQiPVwBpcP4HDYhZ5V4u9\n4BRCiKA2V1/MvXCw92F2Zv5zzo4/H2k05/zPfc65RrqFzHfvh+ruAAAAAIzwM/MeAAAAANi8hAcA\nAABgGOEBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABg\nmC3zHuB4Tj311N62bdu8xwAAAABm3HHHHd/q7qXjbbfw4WHbtm3Zs2fPvMcAAAAAZlTVN1aynVMt\nAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAA\ngGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAAgGG2zHsAAJinbbtumfcITyr7rrhw3iMAABvMEQ8A\nAADAMMIDAAAAMIzwAAAAAAwjPAAAAADDCA8AAADAMMIDAAAAMIzwAAAAAAwjPAAAAADDCA8AAADA\nMMcND1W1u6oerqp7ZtZ+r6runH72VdWd0/q2qvqrmdd+e+Y9L66qu6tqb1V9qKpqzJ8EAAAALIot\nK9jmI0n+S5KPHl7o7n9y+HFVfSDJd2a2/1p3n3uEz7kyyduTfC7JrUnOT/KHJz4yAAAAcLI47hEP\n3f3ZJI8c6bXpqIU3JrnuWJ9RVacneWZ3397dneWI8foTHxcAAAA4maz1Gg8vS/JQd391Zu3sqvpS\nVf1JVb1sWjsjyf6ZbfZPawAAAMAmtpJTLY7lkvz00Q4Hk5zV3d+uqhcn+YOqev6JfmhV7UyyM0nO\nOuusNY4IAADjbNt1y7xHeFLZd8WF8x4BOEGrPuKhqrYk+cdJfu/wWnf/oLu/PT2+I8nXkjw3yYEk\nW2fevnVaO6Luvqq7d3T3jqWlpdWOCAAAAMzZWk61+EdJvtLdPz6FoqqWquqU6fEvJtme5IHuPpjk\nu1X1kum6EG9O8ok1fDcAAABwEljJ7TSvS/K/kzyvqvZX1dumly7OEy8q+fIkd0231/x4knd29+EL\nU/5qkquT7M3ykRDuaAEAAACb3HGv8dDdlxxl/VeOsHZjkhuPsv2eJC84wfkAAACAk9ha72oBAAAA\ncFTCAwAAADCM8AAAAAAMIzwAAAAAwwgPAAAAwDDCAwAAADCM8AAAAAAMIzwAAAAAwwgPAAAAwDDC\nAwAAADCM8AAAAAAMs2XeAwAATx7bdt0y7xGeNPZdceG8RwCAJI54AAAAAAYSHgAAAIBhhAcAAABg\nGOEBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEB\nAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAA\nGEZ4AAAAAIbZcrwNqmp3ktcmebi7XzCtvT/J25McmjZ7b3ffOr32niRvS/JYkn/Z3Z+c1s9P8p+T\nnJLk6u6+Yn3/FAAAYLPbtuuWeY/wpLHvigvnPQKbxEqOePhIkvOPsP7B7j53+jkcHc5JcnGS50/v\n+a9VdUpVnZLkt5JckOScJJdM2wIAAACb2HGPeOjuz1bVthV+3kVJru/uHyT5elXtTXLe9Nre7n4g\nSarq+mnb+054YoAnAf+aAwDAZrGWazxcVlV3VdXuqnr2tHZGkgdnttk/rR1tHQAAANjEVhserkzy\nnCTnJjmY5APrNlGSqtpZVXuqas+hQ4eO/wYAAABgIa0qPHT3Q939WHf/KMmH85PTKQ4kOXNm063T\n2tHWj/b5V3X3ju7esbS0tJoRAQAAgAWwqvBQVafPPH1DknumxzcnubiqnlZVZyfZnuTzSb6QZHtV\nnV1VT83yBShvXv3YAAAAwMlgJbfTvC7JK5KcWlX7k7wvySuq6twknWRfknckSXffW1U3ZPmikY8m\nubS7H5s+57Ikn8zy7TR3d/e96/7XAAAAAAtlJXe1uOQIy9ccY/vLk1x+hPVbk9x6QtMBAAAAJ7W1\n3NUCAAAA4JiEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEe\nAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAA\ngGGEBwAAAGAY4QEAAAAYZsu8BwAAYP1t23XLvEcAgCSOeAAAAAAGEh4AAACAYYQHAAAAYBjhAQAA\nABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhG\neAAAAACGER4AAACAYY4bHqpqd1U9XFX3zKz9x6r6SlXdVVU3VdWzpvVtVfVXVXXn9PPbM+95cVXd\nXVV7q+pDVVVj/iQAAABgUazkiIePJDn/cWu3JXlBd/+dJH+W5D0zr32tu8+dft45s35lkrcn2T79\nPP4zAQAAgE3muOGhuz+b5JHHrX2qux+dnt6eZOuxPqOqTk/yzO6+vbs7yUeTvH51IwMAAAAni/W4\nxsM/T/KHM8/PrqovVdWfVNXLprUzkuyf2Wb/tAYAAABsYlvW8uaq+jdJHk3ysWnpYJKzuvvbVfXi\nJH9QVc9fxefuTLIzSc4666y1jAgAAADM0aqPeKiqX0ny2iT/dDp9It39g+7+9vT4jiRfS/LcJAfy\n06djbJ3Wjqi7r+ruHd29Y2lpabUjAgAAAHO2qvBQVecn+bUkr+vu78+sL1XVKdPjX8zyRSQf6O6D\nSb5bVS+Z7mbx5iSfWPP0AAAAwEI77qkWVXVdklckObWq9id5X5bvYvG0JLdNd8W8fbqDxcuT/HpV\n/b8kP0ryzu4+fGHKX83yHTJ+NsvXhJi9LgQAAACwCR03PHT3JUdYvuYo296Y5MajvLYnyQtOaDoA\nAADgpLYed7UAAAAAOCLhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4A\nAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACA\nYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQH\nAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAA\nYJgVhYeq2l1VD1fVPTNrP19Vt1XVV6ffz57Wq6o+VFV7q+quqnrRzHveMm3/1ap6y/r/OQAAAMAi\nWekRDx9Jcv7j1nYl+XR3b0/y6el5klyQZPv0szPJlclyqEjyviR/L8l5Sd53OFYAAAAAm9OKwkN3\nfzbJI49bvijJtdPja5O8fmb9o73s9iTPqqrTk7w6yW3d/Uh3/3mS2/LEmAEAAABsImu5xsNp3X1w\nevzNJKdNj89I8uDMdvuntaOtAwAAAJvUulxcsrs7Sa/HZyVJVe2sqj1VtefQoUPr9bEAAADABltL\neHhoOoUi0++Hp/UDSc6c2W7rtHa09Sfo7qu6e0d371haWlrDiAAAAMA8rSU83Jzk8J0p3pLkEzPr\nb57ubvGSJN+ZTsn4ZJJXVdWzp4tKvmpaAwAAADapLSvZqKquS/KKJKdW1f4s353iiiQ3VNXbknwj\nyRunzW9N8poke5N8P8lbk6S7H6mqf5fkC9N2v97dj79gJQAAALCJrCg8dPclR3nplUfYtpNcepTP\n2Z1k94qnAwAAAE5q63JxSQAAAIAjER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQH\nAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAA\nYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYbbMewDg5LFt\n1y3zHgEAADjJOOIBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAAGEZ4AAAAAIYRHgAAAIBh\nhAcAAABgGOEBAAAAGEZ4AAAAAIZZdXioqudV1Z0zP9+tqndX1fur6sDM+mtm3vOeqtpbVfdX1avX\n508AAAAAFtWW1b6xu+9Pcm6SVNUpSQ4kuSnJW5N8sLt/Y3b7qjonycVJnp/kF5L8cVU9t7sfW+0M\nAAAAwGJbr1MtXpnka939jWNsc1GS67v7B9399SR7k5y3Tt8PAAAALKD1Cg8XJ7lu5vllVXVXVe2u\nqmdPa2ckeXBmm/3TGgAAALBJrTk8VNVTk7wuyX+flq5M8pwsn4ZxMMkHVvGZO6tqT1XtOXTo0FpH\nBAAAAOZkPY54uCDJF7v7oSTp7oe6+7Hu/lGSD+cnp1McSHLmzPu2TmtP0N1XdfeO7t6xtLS0DiMC\nAAAA87Ae4eGSzJxmUVWnz7z2hiT3TI9vTnJxVT2tqs5Osj3J59fh+wEAAIAFteq7WiRJVT09yS8n\necfM8n+oqnOTdJJ9h1/r7nur6oYk9yV5NMml7mgBAAAAm9uawkN3/2WSv/m4tTcdY/vLk1y+lu8E\nAAAATh7rdVcLAAAAgCcQHgAAAIBhhAcAAABgGOEBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEB\nAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAAGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAA\nGEZ4AAAAAIYRHgAAAIBhhAcAAABgGOEBAAAAGGbLvAcAAABg8Wzbdcu8R3jS2HfFhfMeYShHPAAA\nAADDCA8AAADAMMIDAAAAMIzwAAAAAAwjPAAAAADDCA8AAADAMMIDAAAAMIzwAAAAAAwjPAAAAADD\nCA8AAADAMMIDAAAAMIzwAAAAAAwjPAAAAADDrDk8VNW+qrq7qu6sqj3T2s9X1W1V9dXp97On9aqq\nD1XV3qq6q6petNbvBwAAABbXeh3x8A+6+9zu3jE935Xk0929Pcmnp+dJckGS7dPPziRXrtP3AwAA\nAAto1KkWFyW5dnp8bZLXz6x/tJfdnuRZVXX6oBkAAACAOVuP8NBJPlVVd1TVzmnttO4+OD3+ZpLT\npsdnJHlw5r37pzUAAABgE9qyDp/xS919oKr+VpLbquorsy92d1dVn8gHTgFjZ5KcddZZ6zAiAAAA\nMA9rPuKhuw9Mvx9OclOS85I8dPgUiun3w9PmB5KcOfP2rdPa4z/zqu7e0d07lpaW1joiAAAAMCdr\nCg9V9fSqesbhx0leleSeJDcnecu02VuSfGJ6fHOSN093t3hJku/MnJIBAAAAbDJrPdXitCQ3VdXh\nz/rd7v6jqvpCkhuq6m1JvpHkjdP2tyZ5TZK9Sb6f5K1r/H4AAABgga0pPHT3A0n+7hHWv53klUdY\n7ySXruU7AQAAgJPHqNtpAgAAAAgPAAAAwDjrcTtNmKttu26Z9wgAAAAchSMeAAAAgGGEBwAAAGAY\n4QEAAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEA\nAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAY\nRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAYRngAAAAAhhEeAAAAgGGEBwAAAGAY4QEAAAAYRngA\nAAAAhhEeAAAAgGGEBwAAAGCYVYeHqjqzqj5TVfdV1b1V9a5p/f1VdaCq7px+XjPznvdU1d6qur+q\nXr0efwAAAACwuLas4b2PJvnX3f3FqnpGkjuq6rbptQ9292/MblxV5yS5OMnzk/xCkj+uqud292Nr\nmAEAAABYYKs+4qG7D3b3F6fHf5Hky0nOOMZbLkpyfXf/oLu/nmRvkvNW+/0AAADA4lvLEQ8/VlXb\nkrwwyeeSvDTJZVX15iR7snxUxJ9nOUrcPvO2/Tl2qDhpbdt1y7xHAAAAgIWw5otLVtXPJbkxybu7\n+7tJrkzynCTnJjmY5AOr+MydVbWnqvYcOnRorSMCAAAAc7Km8FBVT8lydPhYd/9+knT3Q939WHf/\nKMmH85PTKQ4kOXPm7VuntSfo7qu6e0d371haWlrLiAAAAMAcreWuFpXkmiRf7u7fnFk/fWazNyS5\nZ3p8c5KLq+ppVXV2ku1JPr/a7wcAAAAW31qu8fDSJG9KcndV3TmtvTfJJVV1bpJOsi/JO5Kku++t\nqhuS3JflO2Jc6o4WAAAAsLmtOjx0958mqSO8dOsx3nN5kstX+50AAADAyWXNF5cEAAAAOBrhAQAA\nABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhG\neAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAA\nAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACG\nER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYBjhAQAAABhmw8NDVZ1fVfdX\n1d6q2rXR3w8AAABsnA0ND1V1SpLfSnJBknOSXFJV52zkDAAAAMDG2egjHs5Lsre7H+juHya5PslF\nGzwDAAAAsEE2OjyckeTBmef7pzUAAABgE9oy7wGOpKp2Jtk5Pf1eVd0/z3lW4dQk35r3EJw07C+s\nlH2FE2F/YaXsK5wI+wsrZV85AfXv5z3Bqv3tlWy00eHhQJIzZ55vndZ+SndfleSqjRpqvVXVnu7e\nMe85ODnYX1gp+wonwv7CStlXOBH2F1bKvsKsjT7V4gtJtlfV2VX11CQXJ7l5g2cAAAAANsiGHvHQ\n3Y9W1WVJPpnklCS7u/vejZwBAAAA2Dgbfo2H7r41ya0b/b0b7KQ9TYS5sL+wUvYVToT9hZWyr3Ai\n7C+slH2FH6vunvcMAAAAwCa10dd4AAAAAJ5EhId1VlXnV9X9VbW3qnbNex4WV1XtrqqHq+qeec/C\nYquqM6vqM1V1X1XdW1XvmvdMLKaq+mtV9fmq+j/TvvJv5z0Ti6+qTqmqL1XV/5j3LCyuqtpXVXdX\n1Z1VtWfe87DYqupZVfXxqvpKVX25qv7+vGdivpxqsY6q6pQkf5bkl5Psz/JdPC7p7vvmOhgLqape\nnuR7ST7a3S+Y9zwsrqo6Pcnp3f3FqnpGkjuSvN7/tvB4VVVJnt7d36uqpyT50yTv6u7b5zwaC6yq\n/lWSHUme2d2vnfc8LKaq2pdkR3d/a96zsPiq6tok/6u7r57uZvjXu/v/znsu5scRD+vrvCR7u/uB\n7v5hkuuTXDTnmVhQ3f3ZJI/Mew4WX3cf7O4vTo//IsmXk5wx36lYRL3se9PTp0w//oWBo6qqrUku\nTHL1vGcBNoeq+htJXp7kmiTp7h+KDggP6+uMJA/OPN8f/+cAWEdVtS3JC5N8br6TsKimw+bvTPJw\nktu6277CsfynJL+W5EfzHoSF10k+VVV3VNXOeQ/DQjs7yaEkvzOdxnV1VT193kMxX8IDwEmiqn4u\nyY1J3t3d3533PCym7n6su89NsjXJeVXlVC6OqKpem+Th7r5j3rNwUvil7n5RkguSXDqdMgpHsiXJ\ni5Jc2d0vTPKXSVz77klOeFhfB5KcOfN867QGsCbT+fo3JvlYd//+vOdh8U2HtX4myfnznoWF9dIk\nr5vO3b8+yT+sqv8235FYVN19YPr9cJKbsnyKMRzJ/iT7Z464+3iWQwRPYsLD+vpCku1VdfZ0EZWL\nk9w855mAk9x0wcBrkny5u39z3vOwuKpqqaqeNT3+2Sxf7Pgr852KRdXd7+nurd29Lcv/zfI/u/uf\nzXksFlBVPX26uHGmQ+ZflcRduTii7v5mkger6nnT0iuTuCD2k9yWeQ+wmXT3o1V1WZJPJjklye7u\nvnfOY7Ggquq6JK9IcmpV7U/yvu6+Zr5TsaBemuRNSe6ezt1Pkvd2961znInFdHqSa6e7LP1Mkhu6\n2y0SgbU6LclNyx08W5L8bnf/0XxHYsH9iyQfm/4x9oEkb53zPMyZ22kCAAAAwzjVAgAAABhGeAAA\nAACGER4AAACAYYQHAAAAYBjhAQAAABhGeAAAAACGER4AAACAYYQHAAAAYJj/D+cn6HjswhqSAAAA\nAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f99bdb33cc0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "golds = [t for l in open(os.path.join(task_dir, 'test/training/gold/1A.english.training.gold.txt'))\n",
+    "         for t in l.strip().split('\\t')]\n",
+    "plt.hist([0 if g not in freqs else np.log10(freqs[g]) for g in golds])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\t135847/218753\t11271/11780\n",
+      "100\t76343/218753\t10152/11780\n",
+      "1000\t32219/218753\t7661/11780\n",
+      "10000\t9807/218753\t5046/11780\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab = set([l.strip() for l in open(os.path.join(task_dir, 'test/vocabulary/1A.english.vocabulary.txt'))])\n",
     "\n",
-    "import json\n",
-    "import pprint\n",
+    "words_left = lambda x, threshold, vocabulary: [word for word, f in x.items() if f > threshold and word in vocabulary]\n",
     "\n",
-    "import networkx as nx\n",
     "\n",
-    "from semeval_fca import find_paths_to_object"
+    "\n",
+    "for threshold in [10, 100, 1000, 10000]:\n",
+    "    s = set(words_left(freqs, threshold, vocab))\n",
+    "    print('{}\\t{}/{}\\t{}/{}'.format(threshold, len(s), len(vocab), len([g for g in golds if g in s]), len(golds)))"
    ]
   },
   {
@@ -28,19 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "logging.inf('')\n",
     "J = json.load(open(\n",
-    "    '/mnt/store/hlt/Work/hypernym18-SemEval/concept_tree/1A_UMBC_tokenized.txt_100_sg.vec.gz_True_1000_0.2_unit_True_vocabulary_filtered_reduced.cxt.json'))"
+    "    '/mnt/store/hlt/Work/hypernym18-SemEval/concept_tree/1A_UMBC_tokenized.txt_100_sg.vec.gz_True_1000_0.2_unit_True_vocabulary_filtered_reduced.cxt.json'))\n",
+    "logging.inf('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -65,48 +158,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def my_print(list_, max_len=7):\n",
-    "    ans = ' '.join(str(i) for  i in list_[:max_len])\n",
-    "    len_ = len(list_)\n",
+    "def my_print(words, max_len=7):\n",
+    "    words = sorted(words, key=lambda word: freqs[word], reverse=True)\n",
+    "    ans = ' '.join(str(i) for  i in words[:max_len])\n",
+    "    len_ = len(words)\n",
     "    if len_ > max_len:\n",
     "        ans += '... ({})'.format(len_)\n",
-    "    return ans"
+    "    return '{:.2} {}'.format(log10(freqs[words[0]]), ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.4428936410123194"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log10(freqs['how'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coastwise unladen flota sidewheel undecked shallow-draught carrack... (11) 4\n",
-      "vaka flat-bottomed whalebone hidden_reserve kapa balsa_raft sailcloth casco sampan plying butter-box... (15)\n",
-      "cocoanut swiftlet stilt cowry pearl cowries\n",
-      "camlet sultan macaw dey argillite mundu mother-of-pearl mahogany jades micaceous tajine... (31)\n",
+      "3.0 seafaring coastwise dhow unladen windjammer undecked flota... (11) 4\n",
+      "3.0 plying breadfruit flat-bottomed whalebone sampan sailcloth kapa vaka argosy casco butter-box... (15)\n",
+      "3.6 pearl stilt cocoanut cowries cowry swiftlet\n",
+      "3.5 mahogany jade sultan dey mulberry brocade mother-of-pearl dutch macaw tortoiseshell jades... (31)\n",
       "\n",
-      "tunnage wharfside dhow 4\n",
-      "salter seal_oil kapok vapored rum whale_oil\n",
-      "wooden_boat wooden_shoe chantey supercargo lubberly sennit kapa balsa_raft breadfruit_tree whaleboat butter-box\n",
-      "camlet sultan macaw dey argillite mundu mother-of-pearl mahogany jades micaceous tajine... (31)\n",
+      "2.1 dhow wharfside tunnage 4\n",
+      "3.5 rum kapok salter vapored seal_oil whale_oil\n",
+      "2.2 whaleboat supercargo kapa chantey sennit lubberly butter-box wooden_boat wooden_shoe balsa_raft breadfruit_tree\n",
+      "3.5 mahogany jade sultan dey mulberry brocade mother-of-pearl dutch macaw tortoiseshell jades... (31)\n",
       "\n",
-      "bilgewater oil_tanker supertanker dhow 4\n",
-      "ranson Tropical_Storm_Cindy\n",
-      "ashore islander glycosylphosphatidylinositol bounding_main conga sardines wooden_boat floating_island hawser luff breadfruit... (50)\n",
-      "naupaka sooty_tern black_oystercatcher plana black_slug subtidal striped_marlin coral_reef_fish purple_heron butterflyfish conjunctive_adverb... (176)\n",
+      "2.2 supertanker dhow bilgewater oil_tanker 4\n",
+      "0.7 ranson Tropical_Storm_Cindy\n",
+      "4.2 whale shark ashore fisherman jetty sardines prow porpoise keels breadfruit conga... (50)\n",
+      "4.4 coral reef turtle crabs pelagic lizard crocodile seaweed turquoise octopus starfish... (176)\n",
       "\n",
-      "cruising pleasure_boat dhow 4\n",
-      "coast_guard bulkhead mooring monohull well_deck patrol_ship nautically nitrox diving_equipment coaling_station breton... (61)\n",
-      "ashore islander glycosylphosphatidylinositol bounding_main conga sardines wooden_boat floating_island hawser luff breadfruit... (50)\n",
-      "naupaka sooty_tern black_oystercatcher plana black_slug subtidal striped_marlin coral_reef_fish purple_heron butterflyfish conjunctive_adverb... (176)\n",
+      "3.6 cruising dhow pleasure_boat 4\n",
+      "4.2 diving sailing ballast Harbour lighthouse mooring keel bulkhead seafaring shoreside supertanker... (61)\n",
+      "4.2 whale shark ashore fisherman jetty sardines prow porpoise keels breadfruit conga... (50)\n",
+      "4.4 coral reef turtle crabs pelagic lizard crocodile seaweed turquoise octopus starfish... (176)\n",
       "\n"
      ]
     }
@@ -132,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +255,7 @@
        "[{'Node': 0, 'attributes': [], 'own_objects': []}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +282,7 @@
        " 'cupholder']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +302,7 @@
        "1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -224,18 +338,18 @@
        "(196, 446)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dag.number_of_nodes(), dag.number_of_edges()0"
+    "dag.number_of_nodes(), dag.number_of_edges()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
