extends the dag-related notebook

--- a/dot_to_networkx.ipynb
+++ b/dot_to_networkx.ipynb
@@ -104,6 +104,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def generate_file_names(dataset_dir, dataset_id):\n",
+    "    dataset_mapping = {\n",
+    "        '1A':['english', 'UMBC'],\n",
+    "        '1B':['italian', 'it_itwac'],\n",
+    "        '1C':['spanish', 'es_1Billion'],\n",
+    "        '2A':['medical', 'med_pubmed'],\n",
+    "        '2B':['music', 'music_bioreviews']\n",
+    "    }\n",
+    "    data_file = '{}/training/data/{}.{}.training.data.txt'.format(\n",
+    "        dataset_dir,\n",
+    "        dataset_id,\n",
+    "        dataset_mapping[dataset_id][0]\n",
+    "    )\n",
+    "    gold_file = '{}/training/gold/{}.{}.training.gold.txt'.format(\n",
+    "        dataset_dir,\n",
+    "        dataset_id,\n",
+    "        dataset_mapping[dataset_id][0]\n",
+    "    )\n",
+    "    vocab_file='{}/vocabulary/{}.{}.vocabulary.txt'.format(\n",
+    "        dataset_dir,\n",
+    "        dataset_id,\n",
+    "        dataset_mapping[dataset_id][0]\n",
+    "    )\n",
+    "    return data_file, gold_file, vocab_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dataset_dir = '/home/berend/datasets/semeval2018/SemEval18-Task9'\n",
+    "dataset_id = path_to_dag[0:2]\n",
+    "train_data_file, train_gold_file, vocab = generate_file_names(dataset_dir, dataset_id)\n",
+    "dev_data_file, dev_gold_file = train_data_file.replace('training', 'trial'), train_gold_file.replace('training', 'trial')\n",
+    "test_data_file = train_data_file.replace('training', 'test')\n",
+    "\n",
+    "train_queries = [l.split('\\t')[0].replace(' ', '_') for l in open(train_data_file)] # do we want to consider category as well?\n",
+    "train_golds = [\n",
+    "    [x.replace(' ', '_') for x in line.strip().split('\\t')] for line in open(train_gold_file)\n",
+    "]\n",
+    "\n",
+    "dev_queries = [l.split('\\t')[0].replace(' ', '_') for l in open(dev_data_file)]\n",
+    "dev_golds = [\n",
+    "    [x.replace(' ', '_') for x in line.strip().split('\\t')] for line in open(dev_gold_file)\n",
+    "]\n",
+    "\n",
+    "test_queries = [l.split('\\t')[0].replace(' ', '_') for l in open(test_data_file)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dag_reversed = dag.reverse()\n",
+    "shortest_path_lengths = []\n",
+    "hypernym_pairs_included = []\n",
+    "paths = []\n",
+    "for query, hypernyms in zip(train_queries, train_golds):\n",
+    "    if query in deepest_occurrence:\n",
+    "        query_location = deepest_occurrence[query][0]\n",
+    "        for gold in hypernyms:\n",
+    "            if not gold in deepest_occurrence:\n",
+    "                continue\n",
+    "            hypernym_pairs_included.append((query, gold))\n",
+    "            gold_location = deepest_occurrence[gold][0]\n",
+    "            if gold_location == query_location:\n",
+    "                shortest_path_lengths.append(0)\n",
+    "                paths.append([query_location])\n",
+    "            else:\n",
+    "                all_paths = list(nx.all_simple_paths(dag_reversed, 'node{}'.format(query_location), 'node{}'.format(gold_location)))\n",
+    "                paths.append(all_paths)\n",
+    "                if len(all_paths) == 0:\n",
+    "                    shortest_path_lengths.append(-1)\n",
+    "                else:\n",
+    "                    shortest_path_lengths.append(min([len(p)-1 for p in all_paths]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({-1: 9702, 0: 377, 1: 363, 2: 160, 3: 15})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "print(Counter([spl for spl in shortest_path_lengths]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
