adds a basic evaluation script

--- a/dot_to_networkx.ipynb
+++ b/dot_to_networkx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -14,31 +14,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#path_to_dag = '/home/makrai/project/hypernym18-SemEval/top500words.dot'\n",
-    "path_to_dag = '1A_UMBC_tokenized.txt_100_sg.vec.gz_True_1000_0.5_unit_True_vocabulary_filtered.alph.reduced2.dot'\n",
+    "path_to_dag = '1A_UMBC_tokenized.txt_100_cbow.vec.gz_True_200_0.3_unit_True_vocabulary_filtered.alph.reduced2_more_permissive.dot'\n",
     "dag = nx.drawing.nx_agraph.read_dot(path_to_dag)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "nx.write_gpickle(dag, '/home/makrai/project/hypernym18-SemEval/top500words.gpickle')"
+    "#nx.write_gpickle(dag, '/home/makrai/project/hypernym18-SemEval/top500words.gpickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -66,10 +66,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(35064, 825)\n",
-      "['n913']\n",
-      "(35081, 49)\n",
-      "['n234', 'n913']\n"
+      "(64964, 2)\n",
+      "['n198', 'n86', 'n89', 'n167', 'n180']\n",
+      "(47845, 12)\n",
+      "['n198', 'n80', 'n167', 'n180']\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['node35064', 'node35081']]\n"
+      "[]\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({-1: 9702, 0: 377, 1: 363, 2: 160, 3: 15})\n"
+      "Counter({-1: 9977, 1: 202, 0: 184, 2: 183, 3: 85, 4: 7, 5: 2})\n"
      ]
     }
    ],
